fix(eds-demo): 💄 no visible hover effect on .tab--current

--- a/packages/eds-demo/src/app/(exercise)/dynamic/styles.module.css
+++ b/packages/eds-demo/src/app/(exercise)/dynamic/styles.module.css
@@ -108,6 +108,10 @@ Use Dev Mode in Figma to inspect elements and find the variable name.
 .tab--current {
   border-bottom: 2px solid var(--eds-color-border-strong);
   color: var(--eds-color-text-subtle);
+
+  &:hover {
+    background-color: unset;
+  }
 }
 
 /* Button */
